# Test_task_yadro

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md  Tape.cpp  Tape.h  application.cpp  config.cpp  config.h  config.txt  main.cpp
include/: config.h  tape.h  tape_utilities.h
src/: application.cpp  config.cpp  main.cpp  tape.cpp
test/: sort-test.cpp
